--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.0.4",
+    "axios": "^1.7.4",
     "framer-motion": "^6.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "swr": "^2.2.5",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
