--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.4",
     "axios": "^1.7.4",
     "framer-motion": "^6.2.9",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^3.0.0",
